bugfix with too long comments/names

--- a/admin/style.css
+++ b/admin/style.css
@@ -496,6 +496,7 @@ input[type="submit"]{
 
 .list td {
 	padding: 3px 5px;
+	max-width: 300px;
 }
 
 .list td .subtext {
